# study.python.solutions

./: README.md
apps/mongo_db_communication_libraries/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/mongo_db_communication_libraries/src/mongo_db_communication_libraries/: main.py
apps/mongo_db_communication_libraries/src/mongo_db_communication_libraries/entities/: user_entity.py
apps/mongo_db_communication_libraries/src/mongo_db_communication_libraries/repositories/: beanie_repository.py
apps/mongo_db_communication_libraries/src/mongo_db_communication_libraries/schemas/: user_schema.py
